--- a/index.html
+++ b/index.html
@@ -26,12 +26,6 @@
     <div class="k cc1"></div>
     <div class="k cc2"></div>
     <div class="k cc3"></div>
-        
-    
-
-
-
-
-
+<!--     test for git -->
 </body>
 </html>
